--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
 <% else %>
 <div align="center">
 <div class="jumbotron">
-    <h1>Blocmarks</h1>
+    <h1>NickMarks</h1>
     <h2>Social Bookmarking</h2>
       <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), class: 'btn btn-primary' %>
       <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-success' %></br>
